--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-flow": "^1.0.3",
+    "react-flow-renderer": "^10.3.17",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "reactflow": "^11.7.0",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
@@ -44,5 +47,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "css-loader": "^6.7.3",
+    "style-loader": "^3.3.2"
   }
 }
