--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.5",
     "react-dropzone": "^14.2.3",
     "react-flow": "^1.0.3",
     "react-flow-renderer": "^10.3.17",
